--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -31,6 +31,7 @@
     --body-font: 'Montserrat', sans-serif;
     --big-font-size: 6.25rem;
     --h2-font-size: 1.25rem;
+    --h3-font-size: 1.1rem;
     --normal-font-size: .938rem;
     --small-font-size: .813rem;
 }
@@ -38,6 +39,7 @@
     :root{
         --big-font-size: 10.5rem;
         --h2-font-size: 2rem;
+        --h3-font-size: 1.2rem;
         --normal-font-size: 1rem;
         --small-font-size: .875rem;
     }
@@ -101,7 +103,7 @@ img{
 /*===== CLASS CSS ===== */
 .section{
 	display: block;
-    padding: 0;
+    padding: 1rem 0;
     min-height: calc(100vh - var(--header-height));
     height: auto;
 }
@@ -492,6 +494,24 @@ video {
     color: var(--dark-color);
 }
 
+/* ===== CV =====*/
+
+.cv{
+}
+
+.cv__container{
+    padding: 2rem 0;
+}
+
+.cv__subtitle{
+    color: var(--text-color);
+    margin-bottom: 0;
+    font-size: var(--h3-font-size);
+}
+.cv__text{
+    color: var(--text-color);
+}
+
 /* ===== CONTACT =====*/
 .contact__container{
     row-gap: 2rem;
@@ -534,6 +554,8 @@ video {
 /* ===== FOOTER=====*/
 .footer{
     background-color: var(--dark-color);
+    min-height: auto;
+    padding: 3rem 0;
 }
 .footer__container{
     row-gap: 2rem;
@@ -659,6 +681,10 @@ video {
         width: 380px;
     }
 
+	.footer{
+		min-height: auto;
+		padding-top: 4rem;
+	}
     .footer__container{
         grid-template-columns: repeat(3, 1fr);
         justify-items: center;
