--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -65,7 +65,7 @@
     box-sizing: border-box;
 }
 html{
-    scroll-behavior: smooth;
+    /*scroll-behavior: smooth;*/
     scroll-padding-top: var(--header-height);
     overflow-y: auto;
 }
